--- a/perfil.html
+++ b/perfil.html
@@ -87,7 +87,7 @@
                 <h3 class="w-[100px] text-[#6C7690] font-medium">Location</h3>
                 <p class="font-light">SP, Brasil</p>
             </li>
-            <li class="flex  px-[1.1rem] py-[0.75rem] border-b-[1px]">
+            <li class="flex  px-[1.1rem] py-[0.75rem] ">
                 <h3 class="text-[#6C7690] font-light ">GitHub member since 2021</h3>
             </li>
         </ul>
@@ -123,12 +123,11 @@
                                 <a href="#" data-slug="updated_at">Issues</a>
                             </li>
                         </ul>
-
                     </div>
                 </ul>
                 <div class="md:flex md:items-center w-full md:justify-between">
                     <input type="text"
-                        class="w-auto lg:flex-grow mr-4 my-4 md:my-0 px-4 py-2 rounded-lg border-2 border-zinc-200"
+                        class="w-full md:w-auto md:flex-grow lg:flex-grow mr-4 my-4 md:my-0 px-4 py-2 rounded-lg border-2 border-zinc-200"
                         placeholder="Procure um repositório">
                     <div class="flex space-x-4">
                         <h5>Include:</h5>
@@ -145,8 +144,8 @@
             </div>
             <ul>
                 <li class="bg-pink-300">
-                    <h1>Penis</h1>
-                    <p>meu penis</p>
+                    <h1>fds</h1>
+                    <p>fds fds fds fds fds fds</p>
                 </li>
             </ul>
         </section>
